# jobTracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
.claude/skills/: interview-research.md  jobs.md  scan.md
docs/superpowers/plans/: 2026-03-30-application-tracker.md  2026-03-30-job-tracker.md  2026-03-31-interview-prep-dedup-followup.md
docs/superpowers/specs/: 2026-03-30-application-tracker-design.md  2026-03-30-job-tracker-design.md  2026-03-31-interview-prep-dedup-followup-design.md
hooks/: commit-msg
launchd/: com.drewmerc.jobtracker.plist
src/: config.py  db.py  pipeline.py
src/scrapers/: apple.py  base.py  google.py  greenhouse.py  workday.py
src/steps/: dedup.py  filter.py  interview_prep.py  notify.py  obsidian.py  scrape.py  tailor.py
templates/: application.md  dashboard.md  digest.html
tests/: test_application_tracker.py  test_config.py  test_db.py  test_dedup.py  test_filter.py  test_follow_up.py  test_interview_prep.py  test_notify.py  test_pipeline.py  test_scrapers.py  test_steps_scrape.py  test_tailor.py
tests/fixtures/: greenhouse_response.json  workday_detail_response.json  workday_search_response.json
