[project]
name = "jobtracker"
version = "0.1.0"
description = "Automated job tracker for engineering manager roles"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
jobtracker = "src.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
